# CareerAhead-saas

backend/: .env-example  .gitignore  Makefile  openapi.yaml  pyproject.toml
backend/account/: auth.py  urls.py
backend/account/migrations/: 0001_initial.py
backend/account/models/: EmailVerification.py  RefreshToken.py  User.py  __init__.py
backend/account/serializers/: UserSerializer.py  __init__.py
backend/account/tests/: test_views.py
backend/account/views/: AccessTokenView.py  LoginView.py  LogoutView.py  SignedTokenView.py  __init__.py
backend/careerahead/: asgi.py  context.py  exceptions.py  urls.py  wsgi.py
backend/careerahead/settings/: __init__.py  application.settings.py  base.py  base.settings.py  dev.py  prod.py
backend/careerahead/settings/templates/: local.settings.py
backend/util/: __init__.py  decorators.py  dt.py  helpers.py  mail.py  response.py
backend/util/models/: base_models.py
backend/wallet/: razorpay.py  urls.py
backend/wallet/migrations/: 0001_initial.py
backend/wallet/models/: Recharge.py  Transaction.py  Wallet.py  Withdrawal.py  __init__.py
backend/wallet/serializers/: FundAccountSerializer.py  RechargeSerializer.py  WalletSerializer.py  WithdrawalSerializer.py  __init__.py
backend/wallet/templates/wallet/: recharge_template.html
backend/wallet/views/: FundAccountsView.py  PayRecharge.py  RazorpayWebhookView.py  RechargeView.py  RechargesView.py  VerifyRecharge.py  WalletView.py  WithdrawalsView.py  __init__.py  decorators.py
